--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Tlačítko kanálu">
 <!ENTITY Ctr_hideurelstop	"Skrýt tlačítka zastavit &amp; obnovit">
 <!ENTITY Ctr_hideurlgo		"Skrýt tlačítko 'přejít'">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Přesunout rozevírací šipku na konec řádku">
 <!ENTITY Ctr_hideprbutton	"Nezobrazovat upozornění při blokování vyskakovacích oken">
 <!ENTITY Ctr_urlbar_ib		"Tlačítko identity webu (identity box)">
 <!ENTITY Ctr_verifiedcolors	"Zelený/modrý identity-box pro ověřené stránky">
 <!ENTITY Ctr_faviconurl		"Favicona">
-<!ENTITY Ctr_padlock_hid	"Zámek (skrytý)">
-<!ENTITY Ctr_padlock_def	"Zámek (výchozí)">
-<!ENTITY Ctr_padlock_cla	"Zámek (klasický)">
-<!ENTITY Ctr_padlock_mod	"Zámek (moderní)">
+<!ENTITY Ctr_padlock		"Zámek">
+<!ENTITY Ctr_padlock_hid	"skrytý">
+<!ENTITY Ctr_padlock_def	"výchozí">
+<!ENTITY Ctr_padlock_cla	"klasický">
+<!ENTITY Ctr_padlock_mod	"moderní">
 <!ENTITY Ctr_padlock_ext	"Ikony bezpečnosti">
 <!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Odstranit barevné/zamlžené pozadí (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Barvy 'Blue Aero' pro hlavní lištu a panely">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Navigační lišta: skrýt lištu">
 <!ENTITY Ctr_nobookbarbg	"Lišta záložek: odstranit barvu pozadí">
 <!ENTITY Ctr_bookbarfs		"Lišta záložek: v celoobrazovkovém módu (fullscreen)">
