--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"RSS feed-knap">
 <!ENTITY Ctr_hideurelstop	"Skjul knapperne 'Stop &amp; genindlæs'">
 <!ENTITY Ctr_hideurlgo		"Skjul 'gå'-knap">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Flyt rullemenu-pilen til slutningen af adresselinjerne">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
 <!ENTITY Ctr_verifiedcolors	"Grøn/blå farver på knap til bekræftede websteder og sikre forbindelser">
 <!ENTITY Ctr_faviconurl		"Favicon: aktuelt webstedsikon">
-<!ENTITY Ctr_padlock_hid	"Hængelås ikon til sikre forbindelser (skjul)">
-<!ENTITY Ctr_padlock_def	"Hængelås ikon til sikre forbindelser (standard)">
-<!ENTITY Ctr_padlock_cla	"Hængelås ikon til sikre forbindelser (klassik)">
-<!ENTITY Ctr_padlock_mod	"Hængelås ikon til sikre forbindelser (moderne)">
+<!ENTITY Ctr_padlock		"Hængelås ikon til sikre forbindelser">
+<!ENTITY Ctr_padlock_hid	"skjul">
+<!ENTITY Ctr_padlock_def	"standard">
+<!ENTITY Ctr_padlock_cla	"klassik">
+<!ENTITY Ctr_padlock_mod	"moderne">
 <!ENTITY Ctr_padlock_ext	"Sikkerhedsikoner">
 <!ENTITY Ctr_icopageinfo	"Klik på ikon åbner vinduet 'Sideoplysninger'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Fjern baggrundsfarve/tåge (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Navigationslinjen: skjul værktøjslinje">
 <!ENTITY Ctr_nobookbarbg	"Bogmærkelinje: fjern baggrundsfarve">
 <!ENTITY Ctr_bookbarfs		"Bogmærkelinje: i fuldskærmstilstand">
