--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Κουμπί «Συνδρομή» (RSS)">
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
 <!ENTITY Ctr_hideurlgo		"Απόκρυψη κουμπιού «Μετάβαση»">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
 <!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού πράσινο/μπλε για επαληθευμένες ιστοσελίδες και ασφαλείς συνδέσεις">
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
-<!ENTITY Ctr_padlock_hid	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (κρυμμένο)">
-<!ENTITY Ctr_padlock_def	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (προεπιλογή)">
-<!ENTITY Ctr_padlock_cla	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (κλασικό)">
-<!ENTITY Ctr_padlock_mod	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (μοντέρνο)">
+<!ENTITY Ctr_padlock		"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις">
+<!ENTITY Ctr_padlock_hid	"κρυμμένο">
+<!ENTITY Ctr_padlock_def	"προεπιλογή">
+<!ENTITY Ctr_padlock_cla	"κλασικό">
+<!ENTITY Ctr_padlock_mod	"μοντέρνο">
 <!ENTITY Ctr_padlock_ext	"Εικονίδια ασφάλειας">
 <!ENTITY Ctr_icopageinfo	"Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο ικονίδιο">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Απομάκρυνση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
-<!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Εργαλειοθήκη πλοήγησης: απόκρυψη εργαλειοθήκης">
 <!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: Απομάκρυνση χρώματος φόντου">
 <!ENTITY Ctr_bookbarfs		"Εργαλειοθήκη σελιδοδεικτών: εμφάνιση σε προβολή πλήρους οθόνης">
