--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"RSS feed-button">
 <!ENTITY Ctr_hideurelstop	"Hide 'stop &amp; reload' buttons">
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to location bars end">
 <!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
 <!ENTITY Ctr_urlbar_ib		"Site Identity Button (identity box)">
 <!ENTITY Ctr_verifiedcolors	"Green/blue button colors for verified websites and secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon: current websites icon">
-<!ENTITY Ctr_padlock_hid	"Padlock icon for secure connections (hidden)">
-<!ENTITY Ctr_padlock_def	"Padlock icon for secure connections (default)">
-<!ENTITY Ctr_padlock_cla	"Padlock icon for secure connections (classic)">
-<!ENTITY Ctr_padlock_mod	"Padlock icon for secure connections (modern)">
+<!ENTITY Ctr_padlock		"Padlock icon for secure connections">
+<!ENTITY Ctr_padlock_hid	"hidden">
+<!ENTITY Ctr_padlock_def	"default">
+<!ENTITY Ctr_padlock_cla	"classic">
+<!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"Security icons">
 <!ENTITY Ctr_icopageinfo	"Clicking on icon opens 'page info' window">
 
@@ -240,6 +242,7 @@
 
 <!ENTITY Ctr_aerocolors		"Blue Aero colors for toolbars (and tabs)">
 <!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Hide toolbar">
 <!ENTITY Ctr_nobookbarbg	"Remove background color">
 <!ENTITY Ctr_bookbarfs		"In fullscreen mode">
