--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Botón de suscripción (RSS feed)">
 <!ENTITY Ctr_hideurelstop	"Ocultar botones 'parar y recargar'">
 <!ENTITY Ctr_hideurlgo		"Ocultar botón 'ir'">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de la barra de URL">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando una ventana emergente sea bloqueada">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (cuadro de identidad)">
 <!ENTITY Ctr_verifiedcolors	"Color verde/azul para sitios con conexiones seguras de identidad verificada/no-verificada">
 <!ENTITY Ctr_faviconurl		"Favicon en la barra de URL">
-<!ENTITY Ctr_padlock_hid	"Candado (oculto)">
-<!ENTITY Ctr_padlock_def	"Candado (predeterminado)">
-<!ENTITY Ctr_padlock_cla	"Candado (clásico)">
-<!ENTITY Ctr_padlock_mod	"Candado (moderno)">
+<!ENTITY Ctr_padlock		"Candado">
+<!ENTITY Ctr_padlock_hid	"oculto">
+<!ENTITY Ctr_padlock_def	"predeterminado">
+<!ENTITY Ctr_padlock_cla	"clásico">
+<!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Iconos de seguridad">
 <!ENTITY Ctr_icopageinfo	"Hacer clic en el icono abre la ventana 'Información de la página'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Eliminar color de fondo/niebla (Windows Aeroglass/8)">
 
 <!ENTITY Ctr_aerocolors		"Colores azul aero (celeste) para las barras de herramientas principales y pestañas">
-<!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
 <!ENTITY Ctr_nobookbarbg	"Barra de marcadores: Eliminar color de fondo">
 <!ENTITY Ctr_bookbarfs		"Barra de marcadores: En modo pantalla completa">
