--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Pulsante dei feed nella barra degli indirizzi">
 <!ENTITY Ctr_hideurelstop	"Nascondi pulsanti Stop e Ricarica nella barra degli indirizzi">
 <!ENTITY Ctr_hideurlgo		"Nascondi il pulsante 'Vai'">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Sposta il pulsante Avanti/Indietro all'estremità della barra degli indirizzi">
 <!ENTITY Ctr_hideprbutton	"Nascondi l'icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_urlbar_ib		"Pulsante delle connessioni sicure (riquadro di verifica)">
 <!ENTITY Ctr_verifiedcolors	"Indicatore connessioni sicure blu o verde per i siti verificati">
 <!ENTITY Ctr_faviconurl		"Favicon nella barra degli indirizzi">
-<!ENTITY Ctr_padlock_hid	"Lucchetto (nascosto))">
-<!ENTITY Ctr_padlock_def	"Lucchetto (predefinito)">
-<!ENTITY Ctr_padlock_cla	"Lucchetto (classico)">
-<!ENTITY Ctr_padlock_mod	"Lucchetto (moderno)">
+<!ENTITY Ctr_padlock		"Lucchetto">
+<!ENTITY Ctr_padlock_hid	"nascosto">
+<!ENTITY Ctr_padlock_def	"predefinito">
+<!ENTITY Ctr_padlock_cla	"classico">
+<!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Icone connessioni sicure">
 <!ENTITY Ctr_icopageinfo	"Il clic sull'icona apre le 'Informazioni sulla pagina'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Elimina l’effetto nebbia o il colore di sfondo (Windows AeroGlass e Windows 8)">
 
 <!ENTITY Ctr_aerocolors		"Colori Blue Aero per le barre degli strumenti e le schede principali">
-<!ENTITY Ctr_transpttbw10	"Barre del titolo/menu/schede: rimuovi il colore di sfondo (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Barre del titolo/menu/schede: rimuovi il colore di sfondo">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Nascondi la barra di navigazione">
 <!ENTITY Ctr_nobookbarbg	"Rimuovi colore di sfondo dalla barra dei segnalibri">
 <!ENTITY Ctr_bookbarfs		"Barra dei segnalibri: in modalità tutto schermo">
