--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"URL バーにフィードボタンを表示する">
 <!ENTITY Ctr_hideurelstop	"URL バーの中止&amp;再読み込みボタンを隠す">
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to urlbars end">
 <!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
 <!ENTITY Ctr_urlbar_ib		"Site Identity Button (identity box)">
 <!ENTITY Ctr_verifiedcolors	"認証済みウェブサイトに対する緑/青 識別ボックス">
 <!ENTITY Ctr_faviconurl		"URLバーにファビコンを表示する">
-<!ENTITY Ctr_padlock_hid	"南京錠 (隠す)">
-<!ENTITY Ctr_padlock_def	"南京錠 (デフォルト)">
-<!ENTITY Ctr_padlock_cla	"南京錠 (クラシック)">
-<!ENTITY Ctr_padlock_mod	"南京錠 (モダン)">
+<!ENTITY Ctr_padlock		"南京錠">
+<!ENTITY Ctr_padlock_hid	"隠す">
+<!ENTITY Ctr_padlock_def	"デフォルト">
+<!ENTITY Ctr_padlock_cla	"クラシック">
+<!ENTITY Ctr_padlock_mod	"モダン">
 <!ENTITY Ctr_padlock_ext	"セキュリティアイコン">
 <!ENTITY Ctr_icopageinfo	"Clicking icon opens the 'page info' window">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"背景色とぼかしを取り除く (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Blue Aero colors for main toolbars and tabs">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"ナビゲーションツールバー：ツールバーを隠す">
 <!ENTITY Ctr_nobookbarbg	"ブックマークツールバー: 背景色を取り除く">
 <!ENTITY Ctr_bookbarfs		"ブックマークツールバー: in fullscreen mode">
