--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Przycisk RSS">
 <!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymania i odświeżania">
 <!ENTITY Ctr_hideurlgo		"Ukryj przycisk 'Przejdź'">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Przenieś znacznik rozwinięcia na koniec paska adresu">
 <!ENTITY Ctr_hideprbutton	"Ukryj przycisk informujący o zablokowanym wyskakującym oknie">
 <!ENTITY Ctr_urlbar_ib		"Pole tożsamości paska adresu">
 <!ENTITY Ctr_verifiedcolors	"Zielone i niebieskie pole tożsamości dla zweryfikowanych stron">
 <!ENTITY Ctr_faviconurl		"Ikona ulubionych: ikona bieżącej strony">
-<!ENTITY Ctr_padlock_hid	"Ikona kłódki (ukryta)">
-<!ENTITY Ctr_padlock_def	"Ikona kłódki (domyślna)">
-<!ENTITY Ctr_padlock_cla	"Ikona kłódki (klasyczna)">
-<!ENTITY Ctr_padlock_mod	"Ikona kłódki (nowoczesna)">
+<!ENTITY Ctr_padlock		"Ikona kłódki">
+<!ENTITY Ctr_padlock_hid	"ukryta">
+<!ENTITY Ctr_padlock_def	"domyślna">
+<!ENTITY Ctr_padlock_cla	"klasyczna">
+<!ENTITY Ctr_padlock_mod	"nowoczesna">
 <!ENTITY Ctr_padlock_ext	"Ikony zabezpieczeń">
 <!ENTITY Ctr_icopageinfo	"Kliknięcie ikony otwiera okno 'informacji o stronie'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero głównych pasków narzędzi i kart">
-<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Pasek nawigacji: ukryj pasek narzędzi">
 <!ENTITY Ctr_nobookbarbg	"Pasek zakładek: usuń kolor tła">
 <!ENTITY Ctr_bookbarfs		"Pasek zakładek: w trybie pełnoekranowym">
@@ -282,7 +285,7 @@
 <!ENTITY Ctr_fx34loop		"&brandShortName; 34+ wprowadził funkcje 'dzwonienia i konwersacji'. Odznaczenie tego ustawienia usunie je.">
 <!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+ wprowadził nowy 'motyw dewelopera'. Odznaczenie tych ustawień wyłącza 'motyw dewelopera' oraz jego przycisk w trybie dostosowywania.">
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ wprowadził opcje w karcie. Odznaczenie tego ustawienia przywraca stare okno opcji.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
+<!ENTITY Ctr_fx36prefs2		"Uwaga: Stare okno opcji nie zawiera wszystkich ostatnio dodanych ustawień przeglądarki!">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ wprowadził nowy 'tryb czytnika'. Odznaczenie tych ustawień wyłączy go oraz usunie jego ikonę z paska adresu.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ wprowadził funkcję 'Pocket'. Odznaczenie tego ustawienia wyłączy ją oraz usunie jej ikonę z pasków narzędzi.">
 <!ENTITY Ctr_fx38pocket2	"Uwaga: Przesunięcie przycisku 'Pocket' do 'palety dostosowywania' przed zablokowaniem tego ustawienia usunie także elementy 'Pocket' w zakładkach i menu czytnika.">
