--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Botão Feed">
 <!ENTITY Ctr_hideurelstop	"Ocultar os Botões Parar e Recarregar">
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Mover o dropmarker para o Final das Barras de URL">
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de Notificação Quando um Pop-up Ficar Bloqueado">
 <!ENTITY Ctr_urlbar_ib		"Botão de Identidade do Site (Caixa de Identidade)">
 <!ENTITY Ctr_verifiedcolors	"Caixa de identidade para os Sites Verificados na Cor Verde/Azul">
 <!ENTITY Ctr_faviconurl		"Favicon">
-<!ENTITY Ctr_padlock_hid	"Cadeado (Oculto)">
-<!ENTITY Ctr_padlock_def	"Cadeado (Padrão)">
-<!ENTITY Ctr_padlock_cla	"Cadeado (Clássico)">
-<!ENTITY Ctr_padlock_mod	"Cadeado (Moderno)">
+<!ENTITY Ctr_padlock		"Cadeado">
+<!ENTITY Ctr_padlock_hid	"Oculto">
+<!ENTITY Ctr_padlock_def	"Padrão">
+<!ENTITY Ctr_padlock_cla	"Clássico">
+<!ENTITY Ctr_padlock_mod	"Moderno">
 <!ENTITY Ctr_padlock_ext	"Ícones de Segurança">
 <!ENTITY Ctr_icopageinfo	"Clicar no Ícone Abre a Janela 'Infs. da Página'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Remover a Cor/Névoa do Fundo (Windows AeroGlass/Win8)">
 
 <!ENTITY Ctr_aerocolors		"Cores Azul Aero para Barras de Ferramentas Principais e Abas">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Ocultar a Barra de Navegação">
 <!ENTITY Ctr_nobookbarbg	"Barra de Favoritos: Remover a Cor do Fundo">
 <!ENTITY Ctr_bookbarfs		"Barra de Favoritos: No Modo de Tela Cheia">
