--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Gumb vira RSS">
 <!ENTITY Ctr_hideurelstop	"Skrij gumba 'Ustavi in Ponovno naloži'">
 <!ENTITY Ctr_hideurlgo		"Skrij gumb 'pojdi'">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na konec naslovne vrstice">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
 <!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje indentitete)">
 <!ENTITY Ctr_verifiedcolors	"Zelena/modra barva gumba za preverjene spletne strani in varne povezave">
 <!ENTITY Ctr_faviconurl		"Zaznamka: ikona trenutne spletne strani">
-<!ENTITY Ctr_padlock_hid	"Ikona ključavnice za varne povezave (skrita)">
-<!ENTITY Ctr_padlock_def	"Ikona ključavnice za varne povezave (privzeta)">
-<!ENTITY Ctr_padlock_cla	"Ikona ključavnice za varne povezave (klasična)">
-<!ENTITY Ctr_padlock_mod	"Ikona ključavnice za varne povezave (sodobna)">
+<!ENTITY Ctr_padlock		"Ikona ključavnice za varne povezave">
+<!ENTITY Ctr_padlock_hid	"skrita">
+<!ENTITY Ctr_padlock_def	"privzeta">
+<!ENTITY Ctr_padlock_cla	"klasična">
+<!ENTITY Ctr_padlock_mod	"sodobna">
 <!ENTITY Ctr_padlock_ext	"Ikone za varnost">
 <!ENTITY Ctr_icopageinfo	"Klik na ikono odpre okno 'podatki o strani'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Odstrani barvo ozadja/meglo (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Modre barve Aero za orodne vrstice (in zavihke)">
-<!ENTITY Ctr_transpttbw10	"Orodna vrstica z nazivom/menijem/zavihki: odstrani barvo ozadja (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Orodna vrstica z nazivom/menijem/zavihki: odstrani barvo ozadja">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Orodna vrstica za krmarjenje: skrij orodno vrstico">
 <!ENTITY Ctr_nobookbarbg	"Orodna vrstica zaznamkov: odstrani barvo ozadja">
 <!ENTITY Ctr_bookbarfs		"Orodna vrstica zaznamkov: v celozaslonskem načinu">
