--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Кнопка RSS">
 <!ENTITY Ctr_hideurelstop	"Приховати кнопку «Зупинити та Перезавантажити»">
 <!ENTITY Ctr_hideurlgo		"Приховати кнопку «Перейти»">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Перемістити маркер-трикутник в кінець рядку адреси">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
 <!ENTITY Ctr_verifiedcolors	"Зелений/синій індикатор для перевірених сайтів">
 <!ENTITY Ctr_faviconurl		"Значок сайту">
-<!ENTITY Ctr_padlock_hid	"Замок (прихований)">
-<!ENTITY Ctr_padlock_def	"Замок (типово)">
-<!ENTITY Ctr_padlock_cla	"Замок (класичний)">
-<!ENTITY Ctr_padlock_mod	"Замок (сучасний)">
+<!ENTITY Ctr_padlock		"Замок">
+<!ENTITY Ctr_padlock_hid	"прихований">
+<!ENTITY Ctr_padlock_def	"типово">
+<!ENTITY Ctr_padlock_cla	"класичний">
+<!ENTITY Ctr_padlock_mod	"сучасний">
 <!ENTITY Ctr_padlock_ext	"Іконки безпеки">
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Прибрати затуманення/колір тла (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
-<!ENTITY Ctr_transpttbw10	"Панель заголовку/меню/вкладок: прибрати колір тла (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Панель заголовку/меню/вкладок: прибрати колір тла">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Панель навігації: приховати панель">
 <!ENTITY Ctr_nobookbarbg	"Панель закладок: прибрати колір тла">
 <!ENTITY Ctr_bookbarfs		"Панель закладок: у повноекранному режимі">
