--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"RSS源按钮">
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
 <!ENTITY Ctr_verifiedcolors	"使用绿色/蓝色的身份标识框来显示被验证的网站和加密连接">
 <!ENTITY Ctr_faviconurl		"网站图标：当前网站图标">
-<!ENTITY Ctr_padlock_hid	"加密连接锁图标 (隐藏)">
-<!ENTITY Ctr_padlock_def	"加密连接锁图标 (默认)">
-<!ENTITY Ctr_padlock_cla	"加密连接锁图标 (经典)">
-<!ENTITY Ctr_padlock_mod	"加密连接锁图标 (现代)">
+<!ENTITY Ctr_padlock		"加密连接锁图标">
+<!ENTITY Ctr_padlock_hid	"隐藏">
+<!ENTITY Ctr_padlock_def	"默认">
+<!ENTITY Ctr_padlock_cla	"经典">
+<!ENTITY Ctr_padlock_mod	"现代">
 <!ENTITY Ctr_padlock_ext	"安全图标">
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"移除背景颜色/模糊 (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"主工具栏和标签页使用蓝色 Aero 颜色">
-<!ENTITY Ctr_transpttbw10	"标题/菜单/标签页工具栏: 移除背景颜色(Windows 10)">
+<!ENTITY Ctr_transpttbw10	"标题/菜单/标签页工具栏: 移除背景颜色">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
