--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"網址列中顯示消息來源訂閱按鈕">
 <!ENTITY Ctr_hideurelstop	"隱藏網址列中的停止與重新載入按鈕">
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"移動下拉式三角按鈕到網址列末端">
 <!ENTITY Ctr_hideprbutton	"當彈出型廣告視窗被封鎖時，不顯示通知圖示">
 <!ENTITY Ctr_urlbar_ib		"網站識別鈕 (身份區塊)">
 <!ENTITY Ctr_verifiedcolors	"已驗證的網站識別鈕顯示為綠色/藍色">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
-<!ENTITY Ctr_padlock_hid	"鎖頭 (隱藏)">
-<!ENTITY Ctr_padlock_def	"鎖頭 (預設)">
-<!ENTITY Ctr_padlock_cla	"鎖頭 (經典風格)">
-<!ENTITY Ctr_padlock_mod	"鎖頭 (現代風格)">
+<!ENTITY Ctr_padlock		"鎖頭">
+<!ENTITY Ctr_padlock_hid	"隱藏">
+<!ENTITY Ctr_padlock_def	"預設">
+<!ENTITY Ctr_padlock_cla	"經典風格">
+<!ENTITY Ctr_padlock_mod	"現代風格">
 <!ENTITY Ctr_padlock_ext	"安全圖示">
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"移除背景色彩/模糊 (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"將主工具列和分頁著上天藍色(Aero Blue)">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"隱藏瀏覽工具列">
 <!ENTITY Ctr_nobookbarbg	"書籤列: 移除背景色彩">
 <!ENTITY Ctr_bookbarfs		"書籤列: in fullscreen mode">
