--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"'Feed abonnieren'">
 <!ENTITY Ctr_hideurelstop	"Entferne 'Stopp' &amp; 'Neu laden'">
 <!ENTITY Ctr_hideurlgo		"Entferne 'Los'">
+<!ENTITY Ctr_hideurlsrg		"Entferne 'Neu laden, Stopp &amp; Los' Trennlinien &amp; Leerstellen">
 <!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' ans Ende der Adressleiste">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_verifiedcolors	"Grüne bzw. blaue Farbe bei sicheren Verbindungen und verifizierten Webseiten">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
-<!ENTITY Ctr_padlock_hid	"Schloss-Symbol bei sicheren Verbindungen: versteckt">
-<!ENTITY Ctr_padlock_def	"Schloss-Symbol bei sicheren Verbindungen: unverändert">
-<!ENTITY Ctr_padlock_cla	"Schloss-Symbol bei sicheren Verbindungen: klassisch">
-<!ENTITY Ctr_padlock_mod	"Schloss-Symbol bei sicheren Verbindungen: modern">
+<!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
+<!ENTITY Ctr_padlock_hid	"versteckt">
+<!ENTITY Ctr_padlock_def	"unverändert">
+<!ENTITY Ctr_padlock_cla	"klassisch">
+<!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"Sicherheitssymbole">
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 
@@ -240,6 +242,7 @@
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero' Farben für Leisten (und Tabs)">
 <!ENTITY Ctr_transpttbw10	"Titel/Menu/Tabs Leiste: Hintergrundfarbe entfernen">
+<!ENTITY Ctr_transptcw10	"Verstecke Standardschaltflächen 'Minimieren / Maximieren / Schließen'">
 <!ENTITY Ctr_hidenavbar		"Leiste verstecken">
 <!ENTITY Ctr_nobookbarbg	"Hintergrundfarbe entfernen">
 <!ENTITY Ctr_bookbarfs		"Im 'Vollbild'-Modus">
