--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_flexspace		"Fleksibelny mjazyrum">
 <!ENTITY Ctr_space			"Mjazyrum">
 <!ENTITY Ctr_separator		"Źěleńska smužka">
-<!ENTITY Ctr_puibseparator	"Źěleńska smužka tłocaškow pólowego menija">
+<!ENTITY Ctr_puibseparator	"Źěleńska smužka za tłocašk głownego menija">
 <!ENTITY Ctr_navthrobber	"Pokazka aktiwity">
 <!ENTITY Ctr_sidebarbutton	"Bócnica">
 <!ENTITY Ctr_windowcontrols	"Min./maks./zacyniś (połna wobrazowka)">
@@ -79,7 +79,7 @@
 <!ENTITY Ctr_appbutton2		"Tłocašk na titelowej rědce [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tłocašk na titelowej rědce (schowany)">
 <!ENTITY Ctr_appbutton2io	"Tłocašk na titelowej rědce [&brandShortName;] (jano symbol)">
-<!ENTITY Ctr_paneluibtweak	"Oranžowy menijowy tłocašk na rejtarkowej rědce">
+<!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako nałožeński tłocašk pokazaś, gaž jo na rejtarkowej rědce">
 <!ENTITY Ctr_appbuttonc_o	"Tłocaškowa barwa: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłocaškkowa barwa: Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Tłocaškowa barwa: Carny (Nightly)">
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Njejo widobny w titelowej rědce Windows!">
 <!ENTITY Ctr_appbuttonI2	"Tłocaškowe barwy su jano widobne na titelowej rědce a rejtarkowej rědce!">
 <!ENTITY Ctr_appbutmhi		"Wuša pozicija (jolic jo na rejtarkowej rědce)">
-<!ENTITY Ctr_appbautocol	"Standardnu barwu a barwu Aurora / Nightly awtomatiski nastajiś">
+<!ENTITY Ctr_appbautocol	"Barwu wobglědowakowego kanala awtomatiski nastajiś (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ramiki a slězynowe barwy schowaś">
 <!ENTITY Ctr_dblclclosefx	"Dwójne kliknjenje zacynja aktualne wokno">
 <!ENTITY Ctr_appbclmmenus	"Kliknjobne menije w tłocaškowem meniju (Nowy rejtark, Śišćaś...)">
@@ -136,22 +136,22 @@
 <!ENTITY Ctr_nav_txt_ico3	"Jano tekst pokazaś">
 <!ENTITY Ctr_nav_txt_exp	"Eksperimentelne atributy:">
 <!ENTITY Ctr_iat_notf_vt	"Wertikalne rědki wuzamknuś">
-<!ENTITY Ctr_cpanelmenus	"Kompaktne pólowe menije (cytańske znamjenja, historija atd.)">
+<!ENTITY Ctr_cpanelmenus	"Menijowe wuskokujuce wokna (cytańske znamjenja, historija atd.): kompaktny naglěd">
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka (about:newtab): alternatiwne wuglědanje">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
-<!ENTITY Ctr_alt_addonsp	"Bok 'wěcej info' dodankow: alternatiwny naglěd">
-<!ENTITY Ctr_alt_addonsm	"Zastojnik dodankow: alternatiwny naglěd">
-<!ENTITY Ctr_am_nowarning	"Zastojnik dodankow: Warnowanja schowaś">
-<!ENTITY Ctr_addonversion	"Pśeglěd zastojnika dodankow: wersiju dodanka pokazaś">
-<!ENTITY Ctr_xpinstallui	"Zastojnik dodankow: stare dodankowe instalěrowańske wokno (nastajenje about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Tłocašk menija cytańskich znamjenjow: naglěd dialogowego menija">
+<!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': alternatiwny pórěd">
+<!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
+<!ENTITY Ctr_am_nowarning	"Lisćiny dodankow: Warnowanja schowaś">
+<!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
+<!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
+<!ENTITY Ctr_bmbutpanelm	"Tłocašk menija cytańskich znamjenjow: naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbutnotext	"Tłocašk menija cytańskich znamjenjow: tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: śišćarski pśeglěd pśeskócyś">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
 <!ENTITY Ctr_noresizerxp	"Pśeměnjak wjelikosći schowaś (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Pśidatne adresowe pólo wócyniś (Cmd/Strg+">
-<!ENTITY Ctr_pmhidelabels	"Pólowy meni: Tekst tłocaškow schowaś">
+<!ENTITY Ctr_pmhidelabels	"Wuskokujuce wokno głownego menija: Tekst tłocaškow schowaś">
 <!ENTITY Ctr_menupopupscr	"Wuskokujuce menije: suwate rědki město suwatych šypkow pokazaś">
 <!ENTITY Ctr_closegeneral	"Powšykne zacynjańske symbole">
 
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"Kanalowy tłocašk">
 <!ENTITY Ctr_hideurelstop	"Tłocaška Stoj a Znowego adresowych rědkow schowaś">
 <!ENTITY Ctr_hideurlgo		"Tłocašk 'Start' schowaś">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Tłocašk na kóńc adresowego póla pśesunuś">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
 <!ENTITY Ctr_verifiedcolors	"Zeleny/módry identifikaciski kašćik za wobkšuśone websedła">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
-<!ENTITY Ctr_padlock_hid	"Pytkowy symbol (schowany)">
-<!ENTITY Ctr_padlock_def	"Pytkowy symbol (standard)">
-<!ENTITY Ctr_padlock_cla	"Pytkowy symbol (klasiski)">
-<!ENTITY Ctr_padlock_mod	"Pytkowy symbol (moderny)">
+<!ENTITY Ctr_padlock		"Pytkowy symbol">
+<!ENTITY Ctr_padlock_hid	"schowany">
+<!ENTITY Ctr_padlock_def	"standard">
+<!ENTITY Ctr_padlock_cla	"klasiski">
+<!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Wěstotne symbole">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
 
@@ -223,7 +225,7 @@
 <!ENTITY Ctr_mbarforceright	"Slědny element">
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje rědki">
-<!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje wócynja 'nowy' rejtark (z pomocu browser.newtab.url)">
+<!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje wócynja 'nowy' rejtark">
 <!ENTITY Ctr_hidetbwot		"Rejtarkowu rědku z jano jadnym rejtarkom schowaś">
 <!ENTITY Ctr_hidetbwote		"Wokomuźenje pśi startowanju reducěrowaś">
 <!ENTITY Ctr_hidetbwote_i	"To by mógło brachi na rejtarkowej rědce zawinowaś">
@@ -239,14 +241,15 @@
 <!ENTITY Ctr_menubarnofog	"Slězynowu barwu/młu wótpóraś (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barwy 'Blue Aero' za głowne rědki a rejtarki">
-<!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś (Windows 10)">
-<!ENTITY Ctr_hidenavbar		"Nawigacisku rědku schowaś">
-<!ENTITY Ctr_nobookbarbg	"Rědka cytańskich znamjenjow: slězynowu barwu wótpóraś">
-<!ENTITY Ctr_bookbarfs		"Rědka cytańskich znamjenjow: w modusu połneje wobrazowki">
-<!ENTITY Ctr_nonavbarbg		"Nawigaciska rědka: slězynowu barwu wótpóraś">
+<!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
+<!ENTITY Ctr_hidenavbar		"Symbolowu rědku schowaś">
+<!ENTITY Ctr_nobookbarbg	"Slězynowu barwu wótpóraś">
+<!ENTITY Ctr_bookbarfs		"W modusu połneje wobrazowki">
+<!ENTITY Ctr_nonavbarbg		"Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_nonavbarbg1	"Wustatkujo se na pśidatne rědki a druge górne rědki.">
 <!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'The Fox, Only Better'.">
-<!ENTITY Ctr_nonavborder	"Rědka cytańskich znamjenjow: górny ramik symbolowej rědce pśidaś">
+<!ENTITY Ctr_nonavborder	"Górny ramik symbolowej rědce pśidaś">
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: ramiki symboloweje rědki wótpóraś">
 <!ENTITY Ctr_hidesbclose	"Bócnice: Tłocašk 'Zacyniś' bócnice schowaś">
 <!ENTITY Ctr_notextshadow	"Symbolowe rědki: seń za tekst symboloweje rědki a rejtarki schowaś">
@@ -277,13 +280,13 @@
 <!ENTITY Ctr_nodevtheme		"Zmóžnjenjeju 'wuwijarskeje drastwy' zajźowaś">
 
 <!ENTITY Ctr_experttweaks	"Rozšyrjone">
-<!ENTITY Ctr_fx34search		"&brandShortName; 34+ jo 'nowy pytański pówjerch' zawjadł. Gaž znjemóžnijośo toś to nastajenje, wótnowijośo 'stary pytański pówjerch'.">
-<!ENTITY Ctr_fx34loop		"&brandShortName; 34+ jo 'telefoněrowańske a konwersaciske' funkcije zawjadł. Gaž znjemóžnijośo toś to nastajenje, se wótpóraju.">
-<!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+ jo nowu 'wuwijarsku drastwu' zawjadł. Gaž znjemóžnijośo toś te nastajenja, se 'wuwijarska drastwa' a jeje tłocašk w pśiměrjeńskem modusu znjemóžnjatej.">
-<!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ jo 'nastajenja w rejtarku' zawjadł. Gaž znjemóžnijośo toś to nastajenje, se stare wokno nastajenjow wótnowijo.">
-<!ENTITY Ctr_fx36prefs2		"Note: Old preference window does not contain all recently added browser preferences!">
-<!ENTITY Ctr_fx38reader		"&brandShortName; 38+ jo nowy 'cytański modus' zawjadł. Gaž toś te nastajenja se wótwoliju, znjemóžnijo se a jogo symbol wótpórajo se z adresowego póla.">
-<!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ jo funkciju 'Pocket' zawjadł. Gaž toś to nastajenje se wótwolijo, se wóna znjemóžnijo a jeje tłocašk wótpórajo se ze symbolowych rědkow.">
+<!ENTITY Ctr_fx34search		"Gaž znjemóžnijośo toś to nastajenje, wótnowijośo 'stary pytański pówjerch'.">
+<!ENTITY Ctr_fx34loop		"Gaž znjemóžnijośo toś to nastajenje, se wótpóraju.">
+<!ENTITY Ctr_fx35devtheme	"Gaž znjemóžnijośo toś te nastajenja, se 'wuwijarska drastwa' a jeje tłocašk w pśiměrjeńskem modusu znjemóžnjatej.">
+<!ENTITY Ctr_fx36prefs		"Gaž znjemóžnijośo toś to nastajenje, se stare wokno nastajenjow wótnowijo.">
+<!ENTITY Ctr_fx36prefs2		"Glědajśo: Stare wokno nastajenjow njewopśimujo wšykne njedawno pśidane nastajenja wobglědowaka!">
+<!ENTITY Ctr_fx38reader		"Gaž toś te nastajenja se wótwoliju, znjemóžnijo se 'cytański modus' a jogo symbol wótpórajo se z adresowego póla.">
+<!ENTITY Ctr_fx38pocket		"Gaž toś to nastajenje se wótwolijo, funkcija 'Pocket' se znjemóžnijo a jeje tłocašk wótpórajo se ze symbolowych rědkow.">
 <!ENTITY Ctr_fx38pocket2	"Glědajśo: Pśez pśesuwanje tłocaška 'Pocket' do 'pśiměrjeńskego wokna' pśed znjemóžnjanim toś togo nastajenja wótpórajo teke zapiski 'Pocket' w menijoma cytańskich znamjenjow a cytańskego modusa.">
 <!ENTITY Ctr_e_searchui		"Pytański pówjerch">
 <!ENTITY Ctr_e_loop			"Telefoněrowanje a konwersacija">
