--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -194,15 +194,17 @@
 <!ENTITY Ctr_feedinurl		"RSS voo nupp">
 <!ENTITY Ctr_hideurelstop	"Peida 'peata &amp; laadi uuesti' nupud">
 <!ENTITY Ctr_hideurlgo		"Peida 'mine' nupp">
+<!ENTITY Ctr_hideurlsrg		"Hide 'reload, stop &amp; go' button separators &amp; spaces">
 <!ENTITY Ctr_urlbardropm	"Teisalda rippmenüü avamise nupp aadressiriba lõppu">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_verifiedcolors	"Rohelised/sinised nupud verifitseeritud veebisaitide ja turvaliste ühenduste jaoks">
 <!ENTITY Ctr_faviconurl		"Lehe ikoon: aktiivse veebisaidi ikoon">
-<!ENTITY Ctr_padlock_hid	"Tabaluku ikoon turvaliste ühenduste jaoks (peidetud)">
-<!ENTITY Ctr_padlock_def	"Tabaluku ikoon turvaliste ühenduste jaoks (vaikimisi)">
-<!ENTITY Ctr_padlock_cla	"Tabaluku ikoon turvaliste ühenduste jaoks (klassikaline)">
-<!ENTITY Ctr_padlock_mod	"Tabaluku ikoon turvaliste ühenduste jaoks (kaasaegne)">
+<!ENTITY Ctr_padlock		"Tabaluku ikoon turvaliste ühenduste jaoks">
+<!ENTITY Ctr_padlock_hid	"peidetud">
+<!ENTITY Ctr_padlock_def	"vaikimisi">
+<!ENTITY Ctr_padlock_cla	"klassikaline">
+<!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"Turvalisuse ikoonid">
 <!ENTITY Ctr_icopageinfo	"Ikoonil klõpsamine avab akna 'veebilehe teave'">
 
@@ -239,7 +241,8 @@
 <!ENTITY Ctr_menubarnofog	"Eemalda taustavärv/-udu (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Sinised Aero värvid tööriistaribadel (ja kaartidel)">
-<!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
+<!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Aadressiriba: peida tööriistariba">
 <!ENTITY Ctr_nobookbarbg	"Järjehoidjate riba: eemalda taustavärv">
 <!ENTITY Ctr_bookbarfs		"Järjehoidjate riba: täisekraani režiimis">
