--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -241,7 +241,7 @@
 <!ENTITY Ctr_menubarnofog	"Hintergrundfarbe/-nebel entfernen (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero' Farben für Leisten (und Tabs)">
-<!ENTITY Ctr_transpttbw10	"Titel/Menu/Tabs Leiste: Hintergrundfarbe entfernen">
+<!ENTITY Ctr_transpttbw10	"Titel/Menü/Tabs Leiste: Hintergrundfarbe entfernen">
 <!ENTITY Ctr_transptcw10	"Verstecke Standardschaltflächen 'Minimieren / Maximieren / Schließen'">
 <!ENTITY Ctr_hidenavbar		"Leiste verstecken">
 <!ENTITY Ctr_nobookbarbg	"Hintergrundfarbe entfernen">
